<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:text="payment fragment"
            android:background="@color/black15"
            android:padding="@dimen/dp10"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp120">
            <TextView
                android:text="@string/str_payment"
                android:textColor="@color/black"
                android:textSize="@dimen/sp25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:src="@drawable/icon_btn4"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp10"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
        </RelativeLayout>
        <!--    intro payment-->
        <RelativeLayout
            android:id="@+id/rll_intro"
            android:background="@drawable/bg_radius_white"
            android:padding="@dimen/dp10"
            android:layout_marginHorizontal="@dimen/dp20"
            android:elevation="@dimen/dp10"
            android:layout_marginTop="-20dp"
            android:layout_marginBottom="@dimen/dp20"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp100">
            <TextView
                android:id="@+id/txt_title"
                android:layout_alignParentLeft="true"
                android:layout_toStartOf="@id/img_credit"
                android:text="@string/str_pay_intro"
                android:textSize="@dimen/sp15"
                android:layout_alignParentTop="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_below="@id/txt_title"
                android:text="@string/str_pay_active"
                android:textColor="@color/teal_200"
                android:textSize="@dimen/sp17"
                android:gravity="bottom"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@id/img_credit"
                android:src="@drawable/image_credit"
                android:padding="@dimen/dp10"
                android:layout_alignParentRight="true"
                android:scaleType="centerCrop"
                android:layout_width="@dimen/dp100"
                android:layout_height="@dimen/dp100"/>
        </RelativeLayout>
        <!--    container wallets-->
        <RelativeLayout
            android:id="@+id/rll_container_add_credit"
            android:background="@drawable/bg_radius_green"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="@dimen/dp20"
            android:paddingVertical="@dimen/dp5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50">
            <ImageView
                android:id="@+id/img_credit"
                android:src="@drawable/icon_shopping_cart"
                android:layout_centerVertical="true"
                android:padding="@dimen/dp10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:tint="@color/orange" />
            <TextView
                android:id="@+id/txt_add_credit"
                android:layout_toEndOf="@id/img_credit"
                android:text="@string/str_credit_add"
                android:textColor="@color/white"
                android:inputType="textMultiLine"
                android:textSize="@dimen/sp15"
                android:layout_alignParentTop="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_below="@id/txt_add_credit"
                android:layout_toEndOf="@id/img_credit"
                android:text="@string/str_credit_intro"
                android:textColor="@color/white"
                android:textSize="@dimen/sp13"
                android:gravity="bottom"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <!--    credit option-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_credit_option"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginHorizontal="@dimen/dp20"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"/>
        <!--    suggest for you-->
        <LinearLayout
            android:background="@drawable/bg_radius_white"
            android:elevation="@dimen/dp3"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginBottom="@dimen/dp100"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/dp20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/str_suggest_for_you"
                android:textColor="@color/black"
                android:textSize="@dimen/sp20"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle_suggest"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/dp10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>