<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="profile fragment"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"/>
        <!--    img avatar name and ranking-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_avatar"
                android:src="@drawable/image_logo"
                android:layout_margin="@dimen/dp20"
                android:layout_width="@dimen/dp70"
                android:layout_height="@dimen/dp70"/>
            <TextView
                android:id="@+id/txt_name"
                android:text="ikker"
                android:textSize="@dimen/sp20"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:padding="@dimen/dp10"
                android:layout_toEndOf="@+id/img_avatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:layout_toEndOf="@+id/img_avatar"
                android:layout_below="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_rank"
                    android:text="thanh vien kim cuong"
                    android:textSize="@dimen/sp17"
                    android:padding="@dimen/dp10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:src="@drawable/icon_arrow_right"
                    android:layout_toEndOf="@id/txt_rank"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp50"
                    android:padding="@dimen/dp5"
                    android:layout_width="@dimen/dp20"
                    android:layout_height="@dimen/dp20"/>
            </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:text="@string/offers_and_savings"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp10"
            android:textSize="@dimen/sp17"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcl_reward"
            android:layout_margin="@dimen/dp10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/my_account"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp10"
            android:textSize="@dimen/sp17"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcl_member"
            android:layout_margin="@dimen/dp10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/opportunity"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp10"
            android:textSize="@dimen/sp17"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="@dimen/dp10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_title_1"
                    android:text="label title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txt_new_1"
                    android:text="New"
                    android:background="@drawable/bg_btn_radius"
                    android:layout_toStartOf="@+id/img_arrow_right_1"
                    android:paddingHorizontal="@dimen/dp10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/img_arrow_right_1"
                    android:src="@drawable/icon_arrow_right"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp20"
                    android:padding="@dimen/dp5"
                    android:layout_width="@dimen/dp20"
                    android:layout_height="@dimen/dp20"/>
            </RelativeLayout>
            <TextView
                android:background="@color/black10"
                android:layout_marginHorizontal="@dimen/dp20"
                android:layout_marginVertical="@dimen/dp10"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_title_2"
                    android:text="label title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txt_new_2"
                    android:text="New"
                    android:background="@drawable/bg_btn_radius"
                    android:layout_toStartOf="@+id/img_arrow_right_2"
                    android:paddingHorizontal="@dimen/dp10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/img_arrow_right_2"
                    android:src="@drawable/icon_arrow_right"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp20"
                    android:padding="@dimen/dp5"
                    android:layout_width="@dimen/dp20"
                    android:layout_height="@dimen/dp20"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>